[CCAP-897] Fixing display logic and text wrapping

--- a/src/main/resources/static/assets/css/custom.css
+++ b/src/main/resources/static/assets/css/custom.css
@@ -837,6 +837,13 @@ div.move-20-up {
   word-break: break-word;
 }
 
+/* Force word wraps for subflow lists */
+.subflow-list {
+  word-break: break-word;
+  overflow-wrap: break-word;
+  padding-right: 1.5em;
+}
+
 /* THIS NEEDS TO BE HERE, IF IT'S REMOVED IT WILL BREAK JAVASCRIPT FOR SAME AS HOME ADDRESS FUNCTIONALITY */
 .hidden {
   display: none !important;
